--- a/HelloWorld/HelloWorld.Droid/Resources/layout/Main.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/Main.axml
@@ -1,35 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px"
-    android:layout_marginRight="20dp"
-    android:layout_marginLeft="20dp">
-    <TextView
-        android:text="Enter a word in a movie title"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  <include
+      android:id="@+id/toolbar"
+      layout="@layout/toolbar" />
+  <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:id="@+id/main_content"
+      android:layout_below="@id/toolbar">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:layout_marginTop="20dp" />
-    <EditText
+        local:tabMode="scrollable" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchTextField"
-        android:layout_marginTop="20dp"
-        android:hint="Movie Name" />
-    <Button
-        android:id="@+id/searchButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Search" />
-    <TextView
-        android:id="@+id/movieResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-</LinearLayout>
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:background="@android:color/white" />
+  </LinearLayout>
+</RelativeLayout>
