--- a/HelloWorld/HelloWorld.Droid/Resources/layout/Main.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/Main.axml
@@ -3,25 +3,15 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  <include
-      android:id="@+id/toolbar"
-      layout="@layout/toolbar" />
-  <LinearLayout
-      android:orientation="vertical"
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <include
+      android:id="@+id/tabbar"
+      layout="@layout/tabbar"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:id="@+id/main_content"
-      android:layout_below="@id/toolbar">
-    <android.support.design.widget.TabLayout
-        android:id="@+id/sliding_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        local:tabMode="scrollable" />
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white" />
-  </LinearLayout>
+      android:layout_below="@id/toolbar"/>
 </RelativeLayout>
