--- a/HelloWorld/HelloWorld.Droid/Resources/layout/toolbar.xml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/toolbar.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
