--- a/HelloWorld/HelloWorld.Droid/Resources/layout/tabbar.xml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/tabbar.xml
@@ -12,7 +12,6 @@
   <android.support.v4.view.ViewPager
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
-      android:layout_height="0px"
-      android:layout_weight="1"
-      android:background="@android:color/white" />
+      android:layout_height="5px"
+      android:layout_weight="1" />
 </LinearLayout>
