--- a/HelloWorld/HelloWorld.Droid/Resources/layout/MovieInput.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/MovieInput.axml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+				android:enabled="true"
             android:text="Search" />
         <ProgressBar
             android:indeterminate="true"
