--- a/HelloWorld/HelloWorld.Droid/Resources/layout/TopRated.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/TopRated.axml
@@ -2,19 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
 
-        <ProgressBar
+	<ProgressBar
             android:indeterminate="true"
             android:id="@+id/marker_progress2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
             style="?android:attr/progressBarStyle" />
-    </LinearLayout>
+  <ListView
+    android:id="@+id/namelistview"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/toolbar">
+  </ListView>
 </RelativeLayout>
