--- a/HelloWorld/HelloWorld.Droid/Resources/layout/Detail.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/Detail.axml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -6,36 +6,37 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-			android:focusable="true"
-			android:focusableInTouchMode="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
-        <TextView
-            android:text="Enter a word in a movie title"
+
+		<ImageView
+        android:id="@+id/image"
+        android:layout_width="1000px"
+        android:layout_height="1000px"
+        android:layout_alignParentRight="true" />
+		<TextView
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView1"
-            android:layout_marginTop="20dp" />
-        <EditText
+            android:id="@+id/title"
+			android:fontFamily="serif"
+            android:layout_marginTop="20dp" 
+			android:textSize="30dp" />
+		<TextView
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/searchTextField"
+            android:id="@+id/genre"
+			android:fontFamily="serif"
             android:layout_marginTop="20dp"
-            android:hint="Movie Name" />
-        <Button
-            android:id="@+id/searchButton"
+			android:textSize="20dp"/>
+		<TextView
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/overview"
             android:layout_marginTop="20dp"
-				android:enabled="true"
-            android:text="Search" />
-        <ProgressBar
-            android:indeterminate="true"
-            android:id="@+id/marker_progress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            style="?android:attr/progressBarStyle" />
+			android:textSize="15dp"/>
+
     </LinearLayout>
 </RelativeLayout>
