--- a/HelloWorld/HelloWorld.Droid/Resources/layout/Detail.axml
+++ b/HelloWorld/HelloWorld.Droid/Resources/layout/Detail.axml
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,8 +14,9 @@
 
 		<ImageView
         android:id="@+id/image"
-        android:layout_width="1000px"
-        android:layout_height="1000px"
+        android:layout_width="1500px"
+        android:layout_height="1500px"
+		android:layout_gravity="center"
         android:layout_alignParentRight="true" />
 		<TextView
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -40,3 +44,4 @@
 
     </LinearLayout>
 </RelativeLayout>
+	</ScrollView>
